--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -8,14 +8,14 @@
 }
 
 .title a {
-  color: #0070f3;
+  color: black;
   text-decoration: none;
 }
 
 .title a:hover,
 .title a:focus,
 .title a:active {
-  text-decoration: underline;
+  color: rgb(211, 51, 51);
 }
 
 .title {
@@ -89,4 +89,11 @@
     width: 100%;
     flex-direction: column;
   }
+}
+.refer{
+  text-decoration: none;
+  color: rgb(211, 51, 51);
+}
+.refer:hover{
+  color: red;
 }
