--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,11 +1,12 @@
 .container {
   min-height: 100vh;
-  padding: 0 0.5rem;
-  display: flex;
-  flex-direction: column;
+  /* padding: 0 0.5rem; */
+  /* display: flex;
+  flex-direction: column; */
   justify-content: center;
   align-items: center;
 }
+
 
 .title a {
   color: black;
@@ -16,6 +17,14 @@
 .title a:focus,
 .title a:active {
   color: rgb(211, 51, 51);
+}
+.navlink{
+  text-decoration: none;
+  color: black;
+}
+.navlink:hover{
+  transition: 0.5;
+  transform: scale(1.1);
 }
 
 .title {
@@ -82,6 +91,41 @@
 
 .logo {
   height: 1em;
+}
+.topnav ul{
+  display: flex;
+  justify-content: space-between;
+  padding: 5px;
+  margin: 25px;
+}
+.listitem{
+  display: flex;
+  justify-content: space-between;
+  width: 30%;
+  align-items: center;
+}
+.topnav ul li{
+  list-style: none;
+  padding: 5px;
+}
+.listsearch{
+  margin-bottom: 7px;
+}
+.navlogo{
+  display: flex;
+  justify-content: center;
+  position: relative;
+  height: 1em;
+  margin-top: 5px;
+}
+.topnav input[type=text]{
+  float: right;
+  padding: 6px;
+  margin-top: 8px;
+  margin-right: 16px;
+  border: none;
+  font-size: 17px;
+  border-radius: 20px;
 }
 
 @media (max-width: 600px) {
