--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -105,7 +105,7 @@
 .topnav{
   margin: 0;
   width: 100%;
-  /* background-color: rgba(0,0,0,0.3);  Set the transparency to 0.3 */
+  background-color: rgba(0, 0, 0, 0.201);
   overflow: hidden;
   padding: 0;
   position: -webkit-sticky; /* Safari */
