--- a/styles/About.module.css
+++ b/styles/About.module.css
@@ -4,8 +4,8 @@
   align-items: center;
 }
 .about {
-    background: rgb(224, 251, 222);
-    background: linear-gradient(360deg, rgb(245, 255, 245) 0%, rgb(248, 101, 101) 100%);
+    /* background: rgb(224, 251, 222);
+    background: linear-gradient(360deg, rgb(245, 255, 245) 0%, rgb(248, 101, 101) 100%); */
     padding: 100px 0 20px 0;
     text-align: center;
 }
@@ -74,8 +74,8 @@
 .team {
     padding: 30px 0;
     text-align: center;
-    background: rgb(224, 251, 222);
-    background: linear-gradient(360deg, rgb(248, 101, 101) 0%, rgb(245, 255, 245) 100%);
+    /* background: rgb(224, 251, 222);
+    background: linear-gradient(360deg, rgb(248, 101, 101) 0%, rgb(245, 255, 245) 100%); */
 }
  
 .team h1 {
