--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -5,7 +5,10 @@
   flex-direction: column; */
   justify-content: center;
   align-items: center;
-  margin-top: 1rem;
+  margin-top: 5rem;
+}
+.navimg{
+  cursor: pointer;
 }
 
 
@@ -19,10 +22,20 @@
 .title a:active {
   color: rgb(211, 51, 51);
 }
-.navlink{
+.navp{
   text-decoration: none;
   color: black;
   font-weight: bold;
+  cursor: pointer;
+  margin-right: 15px;
+}
+.navp:hover{
+  color: rgb(211, 51, 51);
+  /* transition: 0.5s; */
+  transform: scale(1.1);
+}
+.navpdiv{
+  padding-left: 10px;
 }
 .navlink:hover{
   transition: 0.5;
@@ -114,6 +127,11 @@
   position: sticky;
   top: 0;
 }
+.listtabs{
+  padding-left: 1rem;
+  display: flex;
+  justify-content: space-between;
+}
 
 .logo {
   height: 1em;
@@ -124,10 +142,14 @@
   margin-bottom: 2px;
   margin-top: 5px;
 }
+.leftdiv{
+  display: flex;
+  justify-content: space-between;
+}
 .listitem{
   display: flex;
   justify-content: space-between;
-  width: 30%;
+  /* width: 30%; */
   align-items: center;
 }
 .topnav ul li{
@@ -144,6 +166,7 @@
   position: relative;
   height: 1em;
   margin-top: 5px;
+  cursor: pointer;
 }
 .topnav input[type=text]{
   float: right;
