--- a/styles/Hotels.module.css
+++ b/styles/Hotels.module.css
@@ -1,3 +1,13 @@
+.container {
+    min-height: 100vh;
+    /* padding: 0 0.5rem; */
+    /* display: flex;
+    flex-direction: column; */
+    justify-content: center;
+    align-items: center;
+    margin-top: 1.5rem;
+    margin-bottom: 1.5rem;
+  }
 .topdiv{
     display: grid;
     grid-template-columns: auto auto auto;
