--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -7,6 +7,13 @@
   align-items: center;
   margin-top: 5rem;
 }
+.eror {
+  min-height: 100vh;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  margin-top: 10rem;
+}
 .navimg{
   cursor: pointer;
 }
