--- a/styles/Listprop.module.css
+++ b/styles/Listprop.module.css
@@ -31,3 +31,36 @@
         margin: auto;
     }
 }
+.nextbutton{
+    margin-top: 1rem;
+    padding: 1rem;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer; 
+    color: white;
+    font-weight: bold; 
+    font-size: 15px;
+    background-color: rgb(255, 75, 75);
+}
+.nextbutton:hover {
+    background-color: rgb(255, 46, 46);
+}
+.createbutton{
+    margin-top: 1rem;
+    padding: 1rem;
+    border: none;
+    cursor: pointer;
+    background-color: transparent;
+    color: rgb(255, 75, 75);
+    width: 100%;
+    border: 1px solid rgb(255, 75, 75);
+    border-radius: 5px;
+    font-size: 17px;
+}
+.createbutton:hover{
+    background-color: rgb(255, 75, 75);
+    color: white;
+}
+.highlighttext{
+    color: rgb(255, 75, 75);
+}
