--- a/styles/About.module.css
+++ b/styles/About.module.css
@@ -11,6 +11,9 @@
 }
 .paradiv{
     margin-left: 5rem;
+    @media screen and (max-width: 900px){
+        margin-left: 0;
+      }
 }
  
 .about h1 {
