--- a/styles/global.css
+++ b/styles/global.css
@@ -19,6 +19,10 @@ body {
     Droid Sans,
     Helvetica Neue,
     sans-serif;
+    @media screen and (max-width: 900px){
+      margin: 0;
+      padding: 0;
+    }
 }
 
 a {
