--- a/styles/Hotels.module.css
+++ b/styles/Hotels.module.css
@@ -1,12 +1,12 @@
 .container {
     min-height: 100vh;
-    /* padding: 0 0.5rem; */
-    /* display: flex;
-    flex-direction: column; */
     justify-content: center;
     align-items: center;
-    margin-top: 1.5rem;
-    margin-bottom: 1.5rem;
+    margin-top: 3rem;
+    margin-bottom: 2rem;
+    @media screen and (max-width: 900px){
+        margin-top: 0;
+      }
   }
 .topdiv{
     display: grid;
