--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -71,6 +71,7 @@
   color: rgb(211, 51, 51);
   /* transition: 0.5s; */
   transform: scale(1.1);
+  transition: 0.2s;
 }
 .navpdiv{
   padding-left: 10px;
