--- a/styles/Hotels.module.css
+++ b/styles/Hotels.module.css
@@ -10,13 +10,43 @@
   }
 .topdiv{
     display: grid;
-    grid-template-columns: auto auto auto;
+    grid-template-columns: 22.5rem 22.5rem 22.5rem 22.5rem;
     gap: 1rem;
     padding: 10px;
     @media screen and (max-width: 900px){
         display: block;
       }
 
+}
+.addtocart{
+    background-color: skyblue;
+    font-weight: bold;
+    border-radius: 15px;
+    padding: 10px;
+    text-align: center;
+}
+.buynow{
+    background-color: white;
+    border: 2px solid black;
+    border-radius: 15px;
+    padding: 10px;
+    font-weight: bold;
+    text-align: center;
+    margin-bottom: 1rem;
+}
+.buynow:hover{
+    transform: scale(1.03);
+    transition: 0.2s;
+    cursor: pointer;
+    color: rgb(18, 14, 14);
+    border: 2px solid grey;
+}
+.addtocart:hover{
+    transform: scale(1.03);
+    transition: 0.2s;
+    background-color: rgb(117, 216, 255);
+    content: "+";
+    cursor: pointer;
 }
 .price{
     padding-top: 5px;
@@ -35,8 +65,5 @@
       }
 }
 .maindiv:hover{
-    transform: scale(1.03);
-    transition: 0.2s;
     border: 2px solid rgb(167, 166, 166);
-    cursor: pointer;
 }
