--- a/styles/Hoteldetailui.module.css
+++ b/styles/Hoteldetailui.module.css
@@ -101,6 +101,7 @@
     width: 22%;
     border-radius: 10px;
     margin-left: 2rem;
+    margin-bottom: 2rem;
 }
 .filterdiv{
     display: flex;
@@ -208,4 +209,17 @@
 .pricesdiv:hover{
     background-color: rgb(202, 202, 202);
     border: none;
+}
+.selectb{
+    background-color: #FF6C09;
+    text-align: center;
+    width: 30%;
+    border-radius: 30px;
+    color: white;
+    font-size: 20px;
+    font-weight: bold;
+    padding: 10px 0;
+}
+.selectb:hover{
+    cursor: pointer;
 }
