--- a/styles/Hoteldetailui.module.css
+++ b/styles/Hoteldetailui.module.css
@@ -154,6 +154,10 @@
     font-weight: 400;
     color: white;
 }
+.thumbnail{
+    height: 16rem;
+    width: 100%;
+}
 .smallcrousel{
     display: flex;
     flex-direction: row;
