--- a/styles/City.module.css
+++ b/styles/City.module.css
@@ -194,8 +194,8 @@
     width: 100%;
     height: 500px;
 }
-.smallcrousel{
-    visibility: hidden;
+.slider{
+    margin-bottom: 3rem;
 }
 
 /* Button styles */
