--- a/styles/Footer.module.css
+++ b/styles/Footer.module.css
@@ -44,12 +44,28 @@
 }
 .topall{
     display: flex;
-    justify-content: space-between;
-    margin-left: 5rem;
-    margin-right: 10rem;
+    justify-content: center;
+    /* margin-left: 5rem;
+    margin-right: 10rem; */
 }
 .topone{
     text-align: left;
+    width: 20%;
+}
+.toptwo{
+    width: 20%;
+    margin-left: 2rem;
+}
+.topthree{
+    width: 20%;
+    margin-left: 2rem;
+}
+.topfour{
+    width: 20%;
+    margin-left: 2rem;
+}
+.content{
+    text-align: center;
 }
 .para{
     display: block;
@@ -68,12 +84,13 @@
 .quicklink{
     list-style: none;
     align-items: flex-start;
-    text-align: left;
+    padding-left: 0;
+    /* text-align: center; */
 }
 .divhead{
     font-size: larger;
     font-weight: bold;
-    font-family: 'Times New Roman', Times, serif
+    font-family: 'Times New Roman', Times, serif;
 }
 .linkli{
     padding-top: 8px;
@@ -89,15 +106,16 @@
     text-decoration: none;
 }
 .linka {
-    border-radius: 4px;
     border: none;
     color: #fff;
     text-align: center;
     font-size: 1rem;
-    padding: 16px;
-    width: 88px;
-    transition: all 0.5s;
+    /* padding: 16px; */
+    /* width: 88px; */
     cursor: pointer;
+    display: flex;
+    align-items: center;
+    justify-content: center;
   }
 .cicon{
     margin-right: 10px;
@@ -108,7 +126,7 @@
     padding-left: 0;
 }
 .divheadl{
-    text-align: left;
+    text-align: center;
     font-family: 'Times New Roman', Times, serif;
     font-size: larger;
     font-weight: bold;
@@ -117,22 +135,19 @@
   
 .linka{
     cursor: pointer;
-    position: relative;
-    transition: 0.5s;
   }
   
-.linka:after {
+/* .linka:after {
     content: '»';
     position: absolute;
     opacity: 0;  
     top: 14px;
     right: -20px;
     transition: 0.5s;
-  }
+  } */
   
 .linka:hover{
-    padding-right: 24px;
-    padding-left:8px;
+    color: blue;
   }
   
 .linka:hover:after {
